--- a/e2e/package.json
+++ b/e2e/package.json
@@ -11,5 +11,12 @@
   },
   "devDependencies": {
     "playwright": "1.32.1"
+  },
+  "dependencies": {
+    "@ckb-lumos/rpc": "0.20.0-alpha.1",
+    "@types/adm-zip": "0.5.0",
+    "@types/download": "8.0.2",
+    "adm-zip": "0.5.10",
+    "download": "8.0.0"
   }
 }
